Change avatar + final change
Change-Id: I3ef6281269fe73974b847d53fcadeda9c6078eaa

--- a/app/src/main/res/drawable/avatar_2.xml
+++ b/app/src/main/res/drawable/avatar_2.xml
@@ -9,175 +9,160 @@
   the License.
   -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="271.49dp"
-    android:height="271.49dp"
-    android:viewportWidth="271.49"
-    android:viewportHeight="271.49">
+    android:width="175dp"
+    android:height="175dp"
+    android:viewportWidth="175"
+    android:viewportHeight="175">
   <path
-      android:pathData="M0,-1.11h271.49v271.49h-271.49z"
+      android:pathData="M0,0h175v175h-175z"
       android:fillColor="#f0f7d2"/>
   <path
-      android:pathData="M56.19,270.77l-46.84,0l12.77,-50.53l46.84,0l-12.77,50.53z"
+      android:pathData="M18.59,276.3l137.67,0l8.6,-102.13l-154.87,0l8.6,102.13z"
+      android:fillColor="#ff5d1a"/>
+  <path
+      android:pathData="M7.84,147.67c-11.42,7.71 -60.29,76.49 -43.65,89.72C-24.87,245.77 -6,257.72 4.43,265.84c14.8,14.8 37.48,-65.53 37.48,-65.53S26.57,150.71 7.84,147.67Z"
+      android:fillColor="#ff5d1a"/>
+  <path
+      android:pathData="M0.52,161.28a85.44,31.47 0,1 0,170.88 0a85.44,31.47 0,1 0,-170.88 0z"
+      android:fillColor="#ff5d1a"/>
+  <path
+      android:pathData="M34.65,183.76m-44.96,0a44.96,44.96 0,1 1,89.92 0a44.96,44.96 0,1 1,-89.92 0"
+      android:fillColor="#ff5d1a"/>
+  <path
+      android:pathData="M137.75,183.76m-44.96,0a44.96,44.96 0,1 1,89.92 0a44.96,44.96 0,1 1,-89.92 0"
+      android:fillColor="#ff5d1a"/>
+  <path
+      android:pathData="M167.77,150.3s47.82,47.77 42.95,80.81c-2.21,15 -48.1,36.87 -48.1,36.87l-32.82,-52.6Z"
+      android:fillColor="#ff5d1a"/>
+  <path
+      android:pathData="M106,112s-0.42,17.85 14.29,19.88l-18.77,1.84Z"
       android:fillColor="#d37e53"/>
   <path
-      android:pathData="M211.01,270.77l46.84,0l-12.78,-50.53l-46.83,0l12.77,50.53z"
+      android:pathData="M64,138.25h42.11V111.7H64Z"
       android:fillColor="#d37e53"/>
   <path
-      android:pathData="M69.73,272.49l129.33,0l8.08,-95.95l-145.48,0l8.07,95.95z"
-      android:fillColor="#ff5d1a"/>
-  <path
-      android:pathData="M59.63,151.65C48.9,158.89 3,223.5 18.62,235.93c10.28,7.88 28,19.1 37.81,26.73 13.9,13.9 35.21,-61.56 35.21,-61.56S77.23,154.5 59.63,151.65Z"
-      android:fillColor="#ff5d1a"/>
-  <path
-      android:pathData="M52.75,164.44a80.27,29.56 0,1 0,160.54 0a80.27,29.56 0,1 0,-160.54 0z"
-      android:fillColor="#ff5d1a"/>
-  <path
-      android:pathData="M84.82,185.55m-42.23,0a42.23,42.23 0,1 1,84.46 0a42.23,42.23 0,1 1,-84.46 0"
-      android:fillColor="#ff5d1a"/>
-  <path
-      android:pathData="M181.67,185.55m-42.23,0a42.23,42.23 0,1 1,84.46 0a42.23,42.23 0,1 1,-84.46 0"
-      android:fillColor="#ff5d1a"/>
-  <path
-      android:pathData="M209.87,154.12S254.8,199 250.23,230C248.15,244.12 205,264.66 205,264.66l-30.83,-49.41Z"
-      android:fillColor="#ff5d1a"/>
-  <path
-      android:pathData="M198.87,267.7h1.34a150.14,150.14 0,0 1,1.31 -15.62c2,-17.72 4.8,-42 -4.55,-65.58l-1.26,0.49c9.23,23.29 6.48,47.36 4.47,64.93A149.18,149.18 0,0 0,198.87 267.7Z"
-      android:fillColor="#d14f18"/>
-  <path
-      android:pathData="M151.86,118.13s-0.4,16.77 13.42,18.67l-17.63,1.73Z"
-      android:fillColor="#d37e53"/>
-  <path
-      android:pathData="M112.4,142.8H152V117.86H112.4Z"
-      android:fillColor="#d37e53"/>
-  <path
-      android:pathData="M117.62,118.21l33.87,-3.59a33.89,33.89 0,0 0,3.12 15.08C144.24,126.39 117.62,118.21 117.62,118.21Z"
+      android:pathData="M69.57,112.07l36.05,-3.81a36,36 0,0 0,3.32 16C97.9,120.79 69.57,112.07 69.57,112.07Z"
       android:strokeAlpha="0.6"
       android:fillColor="#b9623e"
       android:fillAlpha="0.6"/>
   <path
-      android:pathData="M112.54,117.18l0,-0.16c-0.67,-3.41 -3.21,-9.25 -11.82,-16.85l11.91,1.74v14.82S112.63,117.71 112.54,117.18Z"
+      android:pathData="M64.16,111a1.36,1.36 0,0 1,0 -0.17c-0.71,-3.63 -3.41,-9.85 -12.58,-17.94l12.68,1.85V110.5S64.26,111.54 64.16,111Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M170,67c0.85,24 -14.3,43.75 -38.34,44.61a43.56,43.56 0,1 1,-3.1 -87.06c17.35,-0.62 35.1,8.93 42.62,23.37C174.11,53.48 169.8,60.31 170,67Z"
+      android:pathData="M125.36,57.56c0.91,25.6 -15.22,46.58 -40.81,47.49a46.37,46.37 0,1 1,-3.3 -92.68c18.48,-0.65 37.37,9.51 45.37,24.88C129.7,43.18 125.11,50.45 125.36,57.56Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M161.2,117.68c13.67,-6 13.68,-12.55 13.68,-26.42 0,-7.85 -1.55,-14.17 -2.11,-21.69 -0.54,-7.28 -0.46,-15.36 -0.46,-15.36l-62.72,2.23 2.69,62.35S147.53,123.65 161.2,117.68Z"
+      android:pathData="M116,111.52c14.55,-6.35 14.55,-13.36 14.55,-28.13 0,-8.35 -1.64,-15.08 -2.24,-23.09 -0.57,-7.75 -0.49,-16.36 -0.49,-16.36L61,46.32l2.87,66.37S101.41,117.87 116,111.52Z"
       android:fillColor="#d37e53"/>
   <path
-      android:pathData="M109.43,75s17.78,-3 16.92,-27.34l-23.75,0.65Z"
+      android:pathData="M60.85,66s18.93,-3.25 18,-29.11l-25.28,0.7Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M142.71,72.1a0.95,0.95 0,0 0,0.5 -1.75,11.51 11.51,0 0,0 -12.58,-0.07 0.94,0.94 0,1 0,1 1.63,9.6 9.6,0 0,1 10.64,0A1,1 0,0 0,142.71 72.1Z"
+      android:pathData="M96.28,63a1,1 0,0 0,0.52 -1.86,12.23 12.23,0 0,0 -13.38,-0.08 1,1 0,0 0,1 1.74,10.24 10.24,0 0,1 11.32,0.05A1,1 0,0 0,96.28 63Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M169.24,67.43a0.95,0.95 0,0 0,0.52 -1.74,11.49 11.49,0 0,0 -12.56,-0.53 0.94,0.94 0,1 0,0.9 1.66,9.6 9.6,0 0,1 10.63,0.46A1,1 0,0 0,169.24 67.43Z"
+      android:pathData="M124.52,58a1,1 0,0 0,0.84 -0.46,1 1,0 0,0 -0.29,-1.39 12.25,12.25 0,0 0,-13.38 -0.56,1 1,0 0,0 1,1.76 10.24,10.24 0,0 1,11.31 0.49A1,1 0,0 0,124.52 58Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M151.26,90.4h0.08c2.33,-0.22 5.69,-1.75 5.42,-5a6.88,6.88 0,0 0,-2.9 -4.61,1.28 1.28,0 0,1 -0.49,-0.85l-0.64,-5a0.81,0.81 0,1 0,-1.61 0.21l0.65,5A2.9,2.9 0,0 0,152.88 82a5.27,5.27 0,0 1,2.27 3.45c0.19,2.38 -2.79,3.19 -4,3.3a0.81,0.81 0,0 0,0.07 1.62Z"
+      android:pathData="M105.38,82.47h0.08c2.48,-0.24 6.06,-1.87 5.77,-5.38a7.3,7.3 0,0 0,-3.09 -4.91,1.36 1.36,0 0,1 -0.52,-0.91L106.94,66a0.86,0.86 0,1 0,-1.71 0.22l0.68,5.28a3.1,3.1 0,0 0,1.19 2.06,5.61 5.61,0 0,1 2.41,3.67c0.21,2.54 -3,3.4 -4.21,3.52a0.86,0.86 0,0 0,0.08 1.72Z"
       android:fillColor="#a95a3e"/>
   <path
       android:fillColor="#FF000000"
-      android:pathData="M162.94,80.28a3.84,2.24 90.4,1 0,0.05 -7.68a3.84,2.24 90.4,1 0,-0.05 7.68z"/>
+      android:pathData="M117.81,71.7a4.09,2.39 90.4,1 0,0.06 -8.18a4.09,2.39 90.4,1 0,-0.06 8.18z"/>
   <path
       android:fillColor="#FF000000"
-      android:pathData="M137.47,81.16a3.84,2.24 90.57,1 0,0.08 -7.68a3.84,2.24 90.57,1 0,-0.08 7.68z"/>
+      android:pathData="M90.27,72.4a4.09,2.39 90.4,1 0,0.06 -8.18a4.09,2.39 90.4,1 0,-0.06 8.18z"/>
   <path
-      android:pathData="M112,39.55c2.2,13.28 47.18,20.74 61.9,21 0,0 5.86,-35.31 -33,-34.71C141,25.88 110.26,29 112,39.55Z"
+      android:pathData="M63.6,28.35c2.33,14.13 50.21,22.07 65.89,22.39 0,0 6.24,-37.59 -35.09,-36.95C94.4,13.79 61.73,17.06 63.6,28.35Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M93.47,138.84c1,7.52 18.79,13.52 40.63,13.52 21.46,0 39,-5.79 40.56,-13.12 0.08,-0.35 -18.1,-5.56 -40.56,-5.56S93.45,138.63 93.47,138.84Z"
+      android:pathData="M43.86,134c1,8 20,14.39 43.25,14.39 22.84,0 41.55,-6.16 43.18,-14 0.07,-0.36 -19.27,-5.92 -43.18,-5.92S43.83,133.81 43.86,134Z"
       android:fillColor="#d37e53"/>
   <path
-      android:pathData="M118.09,109.09s-13.17,-3 -8.17,-18.27l8.17,18.27"
+      android:pathData="M70.07,102.37s-14,-3.24 -8.7,-19.45l8.7,19.45"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M110.29,80.85m-8.22,0a8.22,8.22 0,1 1,16.44 0a8.22,8.22 0,1 1,-16.44 0"
+      android:pathData="M61.77,72.31m-8.75,0a8.75,8.75 0,1 1,17.5 0a8.75,8.75 0,1 1,-17.5 0"
       android:fillColor="#d37e53"/>
   <path
-      android:pathData="M113.22,86.39l-0,11.49a3.94,3.94 0,0 1,-3.94 3.94l-2.82,0a0,0 0,0 1,-0 0L106.46,82.44a0,0 0,0 1,-0 0L109.28,82.44A3.94,3.94 0,0 1,113.22 86.39Z"
+      android:pathData="M64.89,77.95L64.89,90.69a3.94,3.94 0,0 1,-3.94 3.94l-3.25,0a0,0 0,0 1,-0 0L57.7,74.03a0,0 0,0 1,-0 0L60.94,74.03A3.94,3.94 0,0 1,64.89 77.95Z"
       android:fillColor="#e9f3c6"/>
   <path
-      android:pathData="M112.4,117.59s-0.66,18.2 -14.49,20.1l18.7,0.3Z"
+      android:pathData="M64,111.42s-0.71,19.37 -15.42,21.39l19.9,0.32Z"
       android:fillColor="#d37e53"/>
   <path
-      android:pathData="M168.22,36.25c-7.89,-12.62 -50,-21.41 -68.74,1.57l67.83,4.29Z"
+      android:pathData="M123.42,24.83C115,11.39 70.17,2 50.25,26.51l72.21,4.55Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M132.18,159.76c15.41,0 26.93,-1.76 35.21,-5.38a30.18,30.18 0,0 0,14.86 -13.12l-1.16,-0.68a28.91,28.91 0,0 1,-14.25 12.56c-8.1,3.55 -19.44,5.27 -34.66,5.27 -31.35,0 -40.89,-12.43 -45,-17.74l-0.5,-0.66 -1.07,0.83 0.5,0.65C90.34,147 100.17,159.76 132.18,159.76Z"
+      android:pathData="M85.07,156.31c16.4,0 28.66,-1.88 37.47,-5.74a32.09,32.09 0,0 0,15.83 -14l-1.24,-0.72A30.79,30.79 0,0 1,122 149.26c-8.63,3.78 -20.7,5.61 -36.9,5.61 -33.38,0 -43.53,-13.23 -47.86,-18.89l-0.54,-0.7 -1.13,0.89 0.53,0.69C40.53,142.68 51,156.31 85.07,156.31Z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M172.96,142.61l0.66,-1.18l5.52,3.09l-0.66,1.18z"
+      android:pathData="M128.46,138.04l0.7,-1.26l5.88,3.29l-0.7,1.26z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M169.23,145.62l0.79,-1.09l5.37,3.88l-0.79,1.09z"
+      android:pathData="M124.51,141.26l0.84,-1.17l5.71,4.12l-0.84,1.17z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M164.07,147.88l1.15,-0.7l3.47,5.69l-1.15,0.7z"
+      android:pathData="M119.01,143.66l1.23,-0.75l3.69,6.05l-1.23,0.75z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M133.43,152.36h1.35v6.73h-1.35z"
+      android:pathData="M86.39,148.43h1.44v7.16h-1.44z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M139.94,152.36h1.35v6.53h-1.35z"
+      android:pathData="M93.32,148.43h1.44v6.95h-1.44z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M127.53,152.36h1.35v6.53h-1.35z"
+      android:pathData="M80.12,148.43h1.44v6.95h-1.44z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M146.17,151.65h1.35v6.4h-1.35z"
+      android:pathData="M99.96,147.67h1.44v6.82h-1.44z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M152.27,150.87l1.33,-0.22l1.14,6.72l-1.33,0.22z"
+      android:pathData="M106.45,146.84l1.42,-0.24l1.21,7.16l-1.42,0.24z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M157.89,150l1.22,-0.58l2.95,6.15l-1.22,0.58z"
+      android:pathData="M112.42,145.91l1.3,-0.62l3.14,6.54l-1.3,0.62z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M88.55,143.69l5.52,-3.09l0.66,1.18l-5.52,3.09z"
+      android:pathData="M38.62,139.2l5.88,-3.29l0.7,1.26l-5.88,3.29z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M92.55,148.17l5.09,-3.87l0.82,1.07l-5.09,3.87z"
+      android:pathData="M42.88,143.97l5.42,-4.12l0.87,1.15l-5.42,4.12z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M99.27,152.89l3.46,-5.69l1.15,0.7l-3.46,5.69z"
+      android:pathData="M50.03,148.98l3.69,-6.06l1.23,0.75l-3.69,6.06z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M120.43,151.65h1.35v6.4h-1.35z"
+      android:pathData="M72.56,147.67h1.44v6.82h-1.44z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M113.22,157.37l1.13,-6.73l1.33,0.22l-1.13,6.73z"
+      android:pathData="M64.88,153.76l1.21,-7.16l1.42,0.24l-1.21,7.16z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M105.9,155.55l2.95,-6.15l1.22,0.58l-2.95,6.15z"
+      android:pathData="M57.09,151.82l3.14,-6.54l1.3,0.62l-3.14,6.54z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M136.31,218.89a1.52,1.52 0,0 0,0.93 -0.32c6.24,-5 61,-49.21 61,-71.81h-1.35c0,9.06 -9.71,23.53 -28.07,41.87a421.68,421.68 0,0 1,-32.42 28.88,0.14 0.14,0 0,1 -0.16,0 422.15,422.15 0,0 1,-36.41 -27.59c-20.68,-17.74 -31.61,-32.1 -31.61,-41.53H66.88c0,10 10.79,24.29 32.08,42.55a419.81,419.81 0,0 0,36.53 27.69A1.46,1.46 0,0 0,136.31 218.89Z"
+      android:pathData="M89.46,219.25a1.59,1.59 0,0 0,1 -0.34c6.64,-5.29 64.93,-52.38 64.93,-76.44H154c0,9.64 -10.33,25.05 -29.88,44.57a450.8,450.8 0,0 1,-34.52 30.75,0.14 0.14,0 0,1 -0.16,0 447.48,447.48 0,0 1,-38.76 -29.37C28.62,169.54 17,154.25 17,144.21H15.55c0,10.62 11.49,25.86 34.15,45.3A449.48,449.48 0,0 0,88.59 219,1.61 1.61,0 0,0 89.46,219.25Z"
       android:fillColor="#d14f18"/>
   <path
-      android:pathData="M67,266.39l1.35,0c-0.1,-4.06 -0.65,-8.86 -1.29,-14.43 -2,-17.57 -4.77,-41.64 4.46,-64.93l-1.25,-0.49c-9.36,23.6 -6.58,47.86 -4.55,65.58C66.33,257.61 66.88,262.39 67,266.39Z"
-      android:fillColor="#d14f18"/>
-  <path
-      android:pathData="M60.97,197.54l1.35,-0.1l2.96,38.45l-1.35,0.1z"
-      android:fillColor="#d14f18"/>
-  <path
-      android:pathData="M134.94,99.34a0.8,0.8 0,0 0,0.78 -0.6l2.22,-8.19a0.81,0.81 0,0 0,-1.56 -0.42l-2.22,8.19a0.81,0.81 0,0 0,0.57 1A0.76,0.76 0,0 0,134.94 99.34Z"
+      android:pathData="M88,92a0.86,0.86 0,0 0,0.83 -0.64l2.36,-8.72a0.86,0.86 0,0 0,-1.67 -0.45L87.17,90.9A0.87,0.87 0,0 0,87.78 92,0.91 0.91,0 0,0 88,92Z"
       android:fillColor="#a95a3e"/>
   <path
-      android:pathData="M136.05,53.37l11,8.34s-21.73,3.78 -31.77,-8.34C110.05,47 136.05,53.37 136.05,53.37Z"
+      android:pathData="M89.18,43.06l11.76,8.88s-23.13,4 -33.83,-8.88C61.51,36.3 89.18,43.06 89.18,43.06Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M165.5,33.19a32.18,32.18 0,0 1,14 28.75s-27.51,0.33 -43.42,-8.57C136.05,53.37 159.49,29 165.5,33.19Z"
+      android:pathData="M120.53,21.58a34.24,34.24 0,0 1,14.88 30.6s-29.29,0.35 -46.23,-9.12C89.18,43.06 114.13,17.07 120.53,21.58Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M104.35,83.38h0.11a0.81,0.81 0,0 0,0.69 -0.91c-0.3,-2.25 0.2,-4 1.45,-5.21a4.83,4.83 0,0 1,4.1 -1.15,0.8 0.8,0 0,0 1,-0.61 0.81,0.81 0,0 0,-0.61 -1,6.39 6.39,0 0,0 -5.54,1.54c-1.16,1.07 -2.44,3.09 -2,6.62A0.81,0.81 0,0 0,104.35 83.38Z"
+      android:pathData="M55.44,75h0.12a0.87,0.87 0,0 0,0.74 -1c-0.33,-2.39 0.2,-4.31 1.54,-5.54a5.1,5.1 0,0 1,4.36 -1.23,0.86 0.86,0 0,0 0.37,-1.68 6.8,6.8 0,0 0,-5.9 1.64c-1.23,1.14 -2.59,3.28 -2.08,7A0.87,0.87 0,0 0,55.44 75Z"
       android:fillColor="#a95a3e"/>
   <path
-      android:pathData="M113.61,60.27l-0.6,20S124,72.44 113.61,60.27Z"
+      android:pathData="M65.3,50.4l-0.64,21.29S76.4,63.36 65.3,50.4Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M183.42,50.53 L169.27,36.38S167.41,49.77 183.42,50.53Z"
+      android:pathData="M139.61,40 L124.55,25S122.57,39.22 139.61,40Z"
       android:fillColor="#013b59"/>
   <path
-      android:pathData="M139.09,96.34l16.82,3.31S145.73,112.5 139.09,96.34Z"
+      android:pathData="M92.42,88.8l17.91,3.51S99.49,106 92.42,88.8Z"
       android:fillColor="#fff"/>
 </vector>
