--- a/app/src/main/res/drawable/avatar_9.xml
+++ b/app/src/main/res/drawable/avatar_9.xml
@@ -9,101 +9,106 @@
   the License.
   -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="272.48dp"
-    android:height="271.49dp"
-    android:viewportWidth="272.48"
-    android:viewportHeight="271.49">
+    android:width="175dp"
+    android:height="175dp"
+    android:viewportWidth="175"
+    android:viewportHeight="175">
   <path
-      android:pathData="M0,0h271.49v271.49h-271.49z"
+      android:pathData="M0,0h175v175h-175z"
       android:fillColor="#f0f7d2"/>
   <path
-      android:pathData="M210.42,235.04l4.98,-43.68l1.18,0.13l-4.98,43.68z"
-      android:fillColor="#d33916"/>
+      android:pathData="M131.85,49.94c0,17.37 6.16,34.74 2.24,47.64S116.71,117.75 82,115s-7.84,-66.7 -7.84,-66.7S131.85,33.12 131.85,49.94Z"
+      android:fillColor="#773d35"/>
   <path
-      android:pathData="M166.82,20.31c17.6,5.54 22.61,13.38 23.94,19 1,4.36 -4.5,8.82 -12.48,1.66"
-      android:strokeWidth="0.94"
-      android:fillColor="#003144"
-      android:strokeColor="#003144"/>
+      android:pathData="M109.15,111.87c1.68,11.21 -3.93,20.17 48.2,30.26s62.21,97.52 62.21,97.52H-34.89s10.08,-89.11 89.67,-107c9.53,-2.8 15.13,-18.49 10.65,-27.46S63.19,81.6 63.19,81.6a9.21,9.21 0,0 1,-6.73 -9c0,-7.28 5.27,-9.48 12.16,-8.38S109.15,111.87 109.15,111.87Z"
+      android:fillColor="#773d35"/>
   <path
-      android:pathData="M189.38,188.22l29.46,83.53l51.99,0l-36.42,-99.41l-45.03,15.88z"
-      android:fillColor="#ffae5d"/>
+      android:pathData="M119.24,67.87a2.52,4.2 0,1 0,5.04 0a2.52,4.2 0,1 0,-5.04 0z"
+      android:fillColor="#160f0e"/>
   <path
-      android:pathData="M189.38,188.22l29.46,83.53l44.64,0l-24.69,-41.1l-4.38,-58.31l-45.03,15.88z"
-      android:fillColor="#ff9954"/>
+      android:pathData="M91.49,68.15a2.52,4.2 0,1 0,5.04 0a2.52,4.2 0,1 0,-5.04 0z"
+      android:fillColor="#160f0e"/>
   <path
-      android:pathData="M117.41,205.37c10.44,25.24 63.9,39.66 89.15,29.21a49.47,49.47 0,1 0,-37.83 -91.42C143.48,153.6 107,180.12 117.41,205.37Z"
-      android:fillColor="#dceefd"/>
+      android:pathData="M110,65.63l0.52,6.25a0.84,0.84 0,0 0,0.45 0.68c1,0.53 3.51,2.15 3.51,4.84 0,3.36 -4.48,4.48 -4.48,4.48"
+      android:strokeWidth="1.88"
+      android:fillColor="#00000000"
+      android:strokeColor="#562a28"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M224.85,156.11l47.69,79a2.25,2.25 0,0 1,-0.3 3c-3.23,2.93 -21.71,-5.95 -29.12,10.33 -4.87,10.71 -15,9.51 -19.59,12.14a2.24,2.24 0,0 1,-2.95 -0.63l-41.73,-58Z"
-      android:fillColor="#dceefd"/>
+      android:pathData="M94.7,86v0.72a5.41,5.41 0,0 1,-3.93 5.19h0"
+      android:strokeWidth="1.88"
+      android:fillColor="#00000000"
+      android:strokeColor="#562a28"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M223.98,271.75l-2.34,-22.8l-17.25,-59.97l-149.16,-0.37l5.37,83.14l153.99,0l9.39,0z"
-      android:fillColor="#dceefd"/>
+      android:pathData="M119.94,144.96L109.01,146.28"
+      android:strokeWidth="1.88"
+      android:fillColor="#00000000"
+      android:strokeColor="#562a28"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M103.65,200.39l-43.05,71.36l-57.28,0l50.02,-93.16l50.31,21.8z"
-      android:fillColor="#ffae5d"/>
+      android:pathData="M73.41,146.8L62.45,145.75"
+      android:strokeWidth="1.88"
+      android:fillColor="#00000000"
+      android:strokeColor="#562a28"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M45.16,188.44a49.47,49.47 0,0 0,49.48 49.47c27.32,0 63.63,-36.12 63.63,-63.44s-46.05,-35.78 -63.63,-35.78A49.71,49.71 0,0 0,45.16 188.44Z"
-      android:fillColor="#dceefd"/>
+      android:pathData="M114.19,92.81 L96.26,89.45s2.24,7.28 7.28,8.41S114.19,92.81 114.19,92.81Z"
+      android:fillColor="#fff"/>
   <path
-      android:pathData="M50.55,165.68 L25.81,216.27S14.13,241 14.47,241.6c1.77,3.25 8.3,12.94 23.36,17.26 14.69,4.2 22.77,12.89 22.77,12.89L103,223.23Z"
-      android:fillColor="#dceefd"/>
+      android:pathData="M99.51,56.87c-5,-0.54 -9.52,1.74 -11,4.1"
+      android:strokeWidth="1.88"
+      android:fillColor="#00000000"
+      android:strokeColor="#160f0e"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M61.93,271.83a0.89,0.89 0,0 0,0.88 -0.78l11.57,-88.26a0.89,0.89 0,0 0,-1.77 -0.23L61,270.82a0.88,0.88 0,0 0,0.77 1Z"
-      android:fillColor="#2c80f9"/>
+      android:pathData="M128.2,56.94c-7.28,-3.92 -12.33,0 -12.33,0"
+      android:strokeWidth="1.88"
+      android:fillColor="#00000000"
+      android:strokeColor="#160f0e"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M166.84,134.67c-7.29,-1.84 -6.49,-17 -6.49,-17l-43.08,-2.77s0.35,17.38 -5.68,19.79c-2.68,1.07 -19.27,4 -19.27,4.11 0,19.9 30.62,30.54 47.59,30.53s47.52,-10.63 47.52,-30.06c0,-0.15 -5,-1.2 -10.29,-2.31C173.16,136.1 169,135.22 166.84,134.67Z"
-      android:fillColor="#ffae5d"/>
+      android:pathData="M132.13,45.17m-7.85,0a7.85,7.85 0,1 1,15.7 0a7.85,7.85 0,1 1,-15.7 0"
+      android:fillColor="#261614"/>
   <path
-      android:pathData="M136.69,152.54h0.05l9.4,-0.56a0.89,0.89 0,1 0,-0.1 -1.78l-9.41,0.56a0.9,0.9 0,0 0,-0.84 0.95A0.91,0.91 0,0 0,136.69 152.54Z"
-      android:fillColor="#da803a"/>
+      android:pathData="M119.8,42.93m-9.81,0a9.81,9.81 0,1 1,19.62 0a9.81,9.81 0,1 1,-19.62 0"
+      android:fillColor="#261614"/>
   <path
-      android:pathData="M160.27,117.14a43.62,43.62 0,0 0,0.94 9.94c-15.64,-2 -25.14,-9.84 -25.14,-9.84Z"
-      android:fillColor="#db8c52"/>
+      android:pathData="M88.13,11A48.36,48.36 0,0 0,46.5 83.91c8.42,14.22 17.25,14 20.61,27.4 0,0 -6.72,-24.1 -3.36,-29.71 0,-1.68 5,-17.37 5,-17.37l-0.56,7.84s12.33,-3.92 7.85,-13.45c0,0 7.29,0 9,-8.4 0,0 24.66,5 26.9,-6.17s20.18,-6.73 20.18,-6.73L120.92,15.47s-6.17,-7.85 -14,-2.25A87.61,87.61 0,0 0,88.13 11Z"
+      android:fillColor="#261614"/>
   <path
-      android:pathData="M116.55,104.85l21,13.18c12.41,1.13 39.61,8.09 42,-14.94 2.34,-22.31 2.06,-26.09 3.76,-48.15s-17,-22.51 -17,-22.51L134,29.49 110.94,49.43"
-      android:fillColor="#ffae5d"/>
+      android:pathData="M122.32,32.84a11.49,9.81 0,1 0,22.98 0a11.49,9.81 0,1 0,-22.98 0z"
+      android:fillColor="#261614"/>
   <path
-      android:pathData="M153.36,64.45a0.78,0.78 0,0 0,0.66 -0.35,0.79 0.79,0 0,0 -0.23,-1.09c-3,-2 -11.08,-2.19 -13.68,-0.78a0.78,0.78 0,0 0,-0.32 1.06,0.79 0.79,0 0,0 1.07,0.32c1.93,-1 9.4,-1 12.07,0.72A0.82,0.82 0,0 0,153.36 64.45Z"
-      android:fillColor="#003144"/>
+      android:pathData="M114.47,21.35a9.81,11.77 0,1 0,19.62 0a9.81,11.77 0,1 0,-19.62 0z"
+      android:fillColor="#261614"/>
   <path
-      android:pathData="M158.38,85.89c2.5,0 5.85,-1.12 6.14,-4.44A7.46,7.46 0,0 0,162.26 76a1.32,1.32 0,0 1,-0.36 -1l0.22,-5.41a0.9,0.9 0,0 0,-1.79 -0.07l-0.22,5.41a3.2,3.2 0,0 0,0.85 2.29,5.73 5.73,0 0,1 1.78,4.08A2.68,2.68 0,0 1,161 83.55a6.47,6.47 0,0 1,-3.11 0.53,0.9 0.9,0 0,0 -0.13,1.79Z"
-      android:fillColor="#da803a"/>
+      android:pathData="M71.32,19.67S78.81,7.88 66.09,6.21c0.18,0 -2.06,-16.81 -19.44,-4.48 0,0 -5.6,-10.08 -16.81,-3.92S22,19.11 22,19.11s-9,2.8 -3.92,10.09c0,0 -10.65,9 -0.56,15.69 0,0 -5,5 0,7.85s12.89,2.24 14,-1.68c0,0 2.8,10.64 11.77,9.52S71.32,19.67 71.32,19.67Z"
+      android:fillColor="#261614"/>
   <path
-      android:pathData="M154,101.44a0.89,0.89 0,0 0,0.13 -1.78,13.56 13.56,0 0,1 -7.83,-4.11A0.9,0.9 0,0 0,145 96.71a15.24,15.24 0,0 0,8.95 4.72Z"
-      android:fillColor="#a53835"/>
+      android:pathData="M68.62,64.25c-6.89,-1.1 -12.16,1.1 -12.16,8.38a9.21,9.21 0,0 0,6.73 9l4.49,0.32Z"
+      android:fillColor="#773d35"/>
   <path
-      android:pathData="M177.58,67.08a0.79,0.79 0,0 0,0.49 -1.4c-2.3,-1.85 -9.72,-3.06 -13.07,-1.65a0.79,0.79 0,1 0,0.61 1.45c2.93,-1.24 9.75,0 11.48,1.43A0.75,0.75 0,0 0,177.58 67.08Z"
-      android:fillColor="#003144"/>
+      android:pathData="M58.42,72.63c0,-4.08 2.21,-6 5.49,-6.39"
+      android:strokeWidth="1.88"
+      android:fillColor="#00000000"
+      android:strokeColor="#562a28"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M97.87,52.06c2.39,-11.3 6.56,-24.18 17.12,-27.51 3.73,-7 16,-9.2 30.25,-7.9 40.35,3.68 43.47,16.76 39.8,28 1.75,5.72 2.44,12.83 -6.48,9.93 -9.88,-3.21 -14,-8.9 -15.54,-12.07 0.9,3 1.19,7.59 -6.51,5.73a18.16,18.16 0,0 1,-10.67 -6.8c-1.46,2.77 -4.86,7.53 -9.75,4.08 0.18,2.09 0.49,10.8 -6.94,11 1.2,10.68 -3.33,17.44 -3.33,17.44L118,91.21l-0.35,14.91C93.93,87.44 93.73,66.51 97.87,52.06Z"
-      android:fillColor="#003144"/>
-  <group>
-    <clip-path
-        android:pathData="M97.87,52.06c2.39,-11.3 6.56,-24.18 17.12,-27.51 3.73,-7 16,-9.2 30.25,-7.9 40.35,3.68 43.47,16.76 39.8,28 1.75,5.72 2.44,12.83 -6.48,9.93 -9.88,-3.21 -14,-8.9 -15.54,-12.07 0.9,3 1.19,7.59 -6.51,5.73a18.16,18.16 0,0 1,-10.67 -6.8c-1.46,2.77 -4.86,7.53 -9.75,4.08 0.18,2.09 0.49,10.8 -6.94,11 1.2,10.68 -3.33,17.44 -3.33,17.44L118,91.21l-0.35,14.91C93.93,87.44 93.73,66.51 97.87,52.06Z"/>
-  </group>
+      android:pathData="M83.94,115.09c10.36,0.74 18.75,0.55 25.51,-0.45 0.4,4.63 0.46,8.9 5.22,13.08C108.3,126.37 90.32,122 83.94,115.09Z"
+      android:fillColor="#562a28"/>
   <path
-      android:pathData="M128,79c-0.63,4.75 -5.23,10.78 -10,10.15s-7.85,-7.67 -7.23,-12.42A8.68,8.68 0,0 1,128 79Z"
-      android:fillColor="#ffae5d"/>
+      android:strokeWidth="1"
+      android:pathData="M163.78,143.8c-21.65,9.83 -47.58,15.56 -75.45,15.56a186.35,186.35 0,0 1,-68.07 -12.43C-27.91,178 -34.89,239.65 -34.89,239.65H219.56S210.31,158.83 163.78,143.8Z"
+      android:fillColor="#00e07a"
+      android:strokeColor="#00e07a"/>
   <path
-      android:pathData="M114,77.91a0.91,0.91 0,0 0,0.87 -0.67c0,-0.07 1.27,-4.69 4,-4.22a0.9,0.9 0,0 0,1 -0.74,0.91 0.91,0 0,0 -0.74,-1c-1.3,-0.22 -3.19,0.06 -4.79,2.62a12.23,12.23 0,0 0,-1.28 2.92,0.9 0.9,0 0,0 0.64,1.09Z"
-      android:fillColor="#da803a"/>
+      android:pathData="M63.28,80m-4.65,0a4.65,4.65 0,1 1,9.3 0a4.65,4.65 0,1 1,-9.3 0"
+      android:fillColor="#2d7ff7"/>
   <path
-      android:pathData="M125.09,104.72s11.13,8 12.24,8.64 0.59,3.08 0.59,3.08l0,7.49L117,123.09l1,-36.7"
-      android:fillColor="#ffae5d"/>
+      android:pathData="M63.28,93.18m-6.2,0a6.2,6.2 0,1 1,12.4 0a6.2,6.2 0,1 1,-12.4 0"
+      android:fillColor="#2d7ff7"/>
   <path
-      android:pathData="M67.21,226.8h0.14a0.89,0.89 0,0 0,0.75 -1l-4.67,-30.28a0.89,0.89 0,1 0,-1.76 0.28l4.66,30.28A0.89,0.89 0,0 0,67.21 226.8Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M223.23,271.83h0.11a0.88,0.88 0,0 0,0.77 -1l-11.56,-88.26a0.9,0.9 0,0 0,-1.78 0.23l11.57,88.26A0.9,0.9 0,0 0,223.23 271.83Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M217.81,226.8a0.89,0.89 0,0 0,0.88 -0.75l4.66,-30.28a0.89,0.89 0,0 0,-1.76 -0.28l-4.67,30.28a0.89,0.89 0,0 0,0.75 1Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M145.42,74.59a2.43,2.43 0,0 1,-1.87 -1.43,5.52 5.52,0 0,1 -0.54,-3h0a5.54,5.54 0,0 1,1.08 -2.89,2.46 2.46,0 0,1 2.1,-1.08c1.53,0.14 2.61,2.15 2.4,4.48a5.52,5.52 0,0 1,-1.07 2.9,2.53 2.53,0 0,1 -1.93,1.08Z"
-      android:fillColor="#003144"/>
-  <path
-      android:pathData="M172.17,77c-1.54,-0.14 -2.61,-2.15 -2.4,-4.48a5.52,5.52 0,0 1,1.07 -2.9,2.21 2.21,0 0,1 4,0.36 5.45,5.45 0,0 1,0.53 3h0a5.52,5.52 0,0 1,-1.07 2.9A2.5,2.5 0,0 1,172.35 77Z"
-      android:fillColor="#003144"/>
+      android:pathData="M63.28,110.23m-8.53,0a8.53,8.53 0,1 1,17.06 0a8.53,8.53 0,1 1,-17.06 0"
+      android:fillColor="#2d7ff7"/>
 </vector>
