--- a/app/src/main/res/drawable/avatar_0.xml
+++ b/app/src/main/res/drawable/avatar_0.xml
@@ -9,122 +9,101 @@
   the License.
   -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="272.48dp"
-    android:height="271.49dp"
-    android:viewportWidth="272.48"
-    android:viewportHeight="271.49">
+    android:width="175dp"
+    android:height="175dp"
+    android:viewportWidth="175"
+    android:viewportHeight="175">
   <path
-      android:pathData="M0,0h271.49v271.49h-271.49z"
+      android:pathData="M0,0h175v175h-175z"
       android:fillColor="#f0f7d2"/>
   <path
-      android:pathData="M198.9,233.2l4.56,-39.96l1.08,0.12l-4.56,39.96z"
-      android:fillColor="#d33916"/>
-  <path
-      android:pathData="M161.32,37.58c14.23,-0.25 19.81,16.15 20.94,22.83 1.21,7.16 -1.45,15 0.18,22 1.28,5.51 5,9.58 6.36,15.08 1.76,7.34 -1,23.16 -1,23.16l-31.63,-3Z"
+      android:pathData="M116.14,35.46c14.23,-0.25 19.81,16.15 20.94,22.82 1.21,7.17 -1.45,15 0.18,22 1.28,5.52 5,9.59 6.35,15.09 1.77,7.33 -1,23.16 -1,23.16l-31.62,-3Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M179.66,190.35l26.95,80.37l47.57,0l-33.33,-94.89l-41.19,14.52z"
+      android:pathData="M134.48,188.23l26.95,80.37l47.57,0l-33.33,-94.9l-41.19,14.53z"
       android:fillColor="#ffae5d"/>
   <path
-      android:pathData="M179.66,190.35l26.95,80.37l33.09,0l1.46,-37.31l-20.31,-57.58l-41.19,14.52z"
+      android:pathData="M134.48,188.23l26.95,80.37l33.09,0l1.45,-37.32l-20.3,-57.58l-41.19,14.53z"
       android:fillColor="#ff9954"/>
   <path
-      android:pathData="M113.8,206.05c9.56,23.1 58.47,36.28 81.57,26.73a45.27,45.27 0,0 0,-34.61 -83.66C137.66,158.68 104.24,182.94 113.8,206.05Z"
+      android:pathData="M68.62,203.92c9.56,23.1 58.47,36.29 81.57,26.73A45.26,45.26 0,0 0,115.58 147C92.48,156.55 59.06,180.82 68.62,203.92Z"
       android:fillColor="#dceefd"/>
   <path
-      android:pathData="M212.11,161l43.64,72.28a2.06,2.06 0,0 1,-0.28 2.74c-3,2.69 -19.87,-5.44 -26.64,9.45 -4.46,9.81 -13.75,8.71 -17.93,11.12a2.06,2.06 0,0 1,-2.7 -0.58L170,202.9Z"
+      android:pathData="M166.93,158.85l43.64,72.28a2.06,2.06 0,0 1,-0.28 2.74c-3,2.69 -19.87,-5.44 -26.64,9.45 -4.46,9.8 -13.76,8.71 -17.93,11.11a2.05,2.05 0,0 1,-2.7 -0.58l-38.19,-53.07Z"
       android:fillColor="#dceefd"/>
   <path
-      android:pathData="M211.32,270.9l-2.15,-24.03l-15.78,-55.82l-136.49,-0.34l4.92,80.22l140.9,-0.03l8.6,0z"
+      android:pathData="M2.51,188.43A45.27,45.27 0,0 0,47.78 233.7c25,0 58.22,-33 58.22,-58s-42.13,-32.74 -58.22,-32.74A45.49,45.49 0,0 0,2.51 188.43Z"
       android:fillColor="#dceefd"/>
   <path
-      android:pathData="M99.22,201.49l-37.01,69.23l-47.62,0l45.76,-89.18l38.87,19.95z"
-      android:fillColor="#ffae5d"/>
-  <path
-      android:pathData="M47.7,190.55A45.26,45.26 0,0 0,93 235.82c25,0 58.22,-33 58.22,-58S109.05,145 93,145A45.48,45.48 0,0 0,47.7 190.55Z"
+      android:pathData="M7.44,167.61 L-15.19,213.9s-10.7,22.59 -10.38,23.18c1.62,3 7.59,11.84 21.38,15.78 13.44,3.85 26.57,15.74 26.57,15.74l33.05,-48.33Z"
       android:fillColor="#dceefd"/>
   <path
-      android:pathData="M52.63,169.73 L30,216s-10.7,22.6 -10.38,23.18C21.23,242.17 27.2,251 41,255c13.44,3.84 26.57,15.73 26.57,15.73l33.05,-48.33Z"
-      android:fillColor="#dceefd"/>
-  <path
-      android:pathData="M62.22,270.37a0.81,0.81 0,0 0,0.81 -0.71l10.58,-80.75a0.82,0.82 0,0 0,-1.62 -0.22L61.41,269.45a0.82,0.82 0,0 0,0.7 0.92Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M159,141.35c-6.67,-1.68 -5.94,-15.57 -5.94,-15.57l-39.42,-2.53s0.32,15.9 -5.19,18.1c-2.45,1 -17.64,3.68 -17.64,3.77 0,18.2 28,27.94 43.55,27.93s43.48,-9.73 43.48,-27.51c0,-0.13 -4.6,-1.09 -9.42,-2.11C164.81,142.67 161,141.86 159,141.35Z"
+      android:pathData="M113.84,139.23c-6.66,-1.69 -5.93,-15.57 -5.93,-15.57l-39.42,-2.53s0.32,15.9 -5.19,18.1c-2.46,1 -17.64,3.68 -17.64,3.76 0,18.21 28,27.94 43.55,27.94s43.48,-9.73 43.48,-27.51c0,-0.14 -4.6,-1.09 -9.42,-2.11C119.63,140.54 115.86,139.74 113.84,139.23Z"
       android:fillColor="#ffd18f"/>
   <path
-      android:pathData="M131.44,157.7h0.05l8.6,-0.51a0.82,0.82 0,1 0,-0.1 -1.64l-8.6,0.52a0.82,0.82 0,0 0,0.05 1.63Z"
+      android:pathData="M86.26,155.58h0l8.6,-0.52a0.81,0.81 0,0 0,0.77 -0.86,0.83 0.83,0 0,0 -0.87,-0.77l-8.6,0.51a0.82,0.82 0,0 0,0.05 1.64Z"
       android:fillColor="#da803a"/>
   <path
-      android:pathData="M192.1,155.79l9.9,1.08l10.54,12.47l-21.73,14.85l-17.42,25.6l-21.3,-22.16l40.01,-31.84z"
+      android:pathData="M146.92,153.67l9.89,1.07l10.55,12.48l-21.73,14.84l-17.42,25.6l-21.3,-22.16l40.01,-31.83z"
       android:fillColor="#dceefd"/>
   <path
-      android:pathData="M153,125.31a39.75,39.75 0,0 0,0.87 9.1c-14.31,-1.82 -23,-9 -23,-9Z"
+      android:pathData="M107.83,123.19a39.78,39.78 0,0 0,0.87 9.1c-14.31,-1.83 -23,-9 -23,-9Z"
       android:fillColor="#db8c52"/>
   <path
-      android:pathData="M113,114.07l19.23,12.06c11.35,1 36.24,7.4 38.45,-13.67 2.15,-20.42 1.89,-23.88 3.44,-44.06s-15.58,-20.6 -15.58,-20.6L129,45.11 107.88,63.36"
+      android:pathData="M67.83,112l19.22,12c11.36,1 36.25,7.41 38.46,-13.67 2.15,-20.41 1.89,-23.87 3.44,-44s-15.58,-20.6 -15.58,-20.6L83.83,43 62.7,61.24"
       android:fillColor="#ffd18f"/>
   <path
-      android:pathData="M146.69,77.11a0.73,0.73 0,0 0,0.61 -0.33,0.72 0.72,0 0,0 -0.21,-1c-2.77,-1.82 -10.14,-2 -12.52,-0.72a0.71,0.71 0,0 0,-0.29 1,0.72 0.72,0 0,0 1,0.29c1.77,-1 8.6,-0.94 11,0.66A0.71,0.71 0,0 0,146.69 77.11Z"
+      android:pathData="M101.51,75a0.72,0.72 0,0 0,0.61 -0.32,0.73 0.73,0 0,0 -0.21,-1c-2.77,-1.81 -10.15,-2 -12.52,-0.72a0.72,0.72 0,0 0,-0.29 1,0.71 0.71,0 0,0 1,0.29c1.78,-1 8.61,-0.94 11.05,0.66A0.7,0.7 0,0 0,101.51 75Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M151.28,96.72c2.3,0 5.36,-1 5.62,-4.07a6.81,6.81 0,0 0,-2.06 -5,1.17 1.17,0 0,1 -0.33,-0.9l0.2,-5a0.82,0.82 0,1 0,-1.64 -0.07l-0.2,5a2.93,2.93 0,0 0,0.77 2.1,5.18 5.18,0 0,1 1.63,3.73 2.45,2.45 0,0 1,-1.56 2.07,6.2 6.2,0 0,1 -2.84,0.49 0.82,0.82 0,1 0,-0.12 1.63Z"
+      android:pathData="M106.1,94.6c2.3,0 5.36,-1 5.62,-4.07a6.76,6.76 0,0 0,-2.07 -5,1.23 1.23,0 0,1 -0.32,-0.9l0.2,-5a0.82,0.82 0,1 0,-1.64 -0.06l-0.2,5a2.89,2.89 0,0 0,0.77 2.09,5.22 5.22,0 0,1 1.63,3.74 2.44,2.44 0,0 1,-1.56 2.06,6 6,0 0,1 -2.84,0.49 0.82,0.82 0,0 0,-0.12 1.64Z"
       android:fillColor="#d69265"/>
   <path
-      android:pathData="M154.09,37.58C123.52,12.11 102.73,40.71 100,50.87c-2,7.31 -3.11,16.66 -6.56,23.41 -2.71,5.3 -8.26,8.7 -11,14 -3.69,7 -3.29,23.46 -3.29,23.46l34.72,3a142.15,142.15 0,0 1,7.82 -38.55C131.7,47.26 154.09,37.58 154.09,37.58Z"
+      android:pathData="M108.91,35.46C78.34,10 57.55,38.58 54.79,48.74c-2,7.31 -3.11,16.67 -6.56,23.41 -2.71,5.31 -8.26,8.71 -11,14 -3.68,7 -3.28,23.45 -3.28,23.45l34.72,3A142.12,142.12 0,0 1,76.46 74C86.52,45.13 108.91,35.46 108.91,35.46Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M168.86,79.51a0.72,0.72 0,0 0,0.45 -1.28c-2.11,-1.7 -8.89,-2.8 -12,-1.51a0.72,0.72 0,0 0,0.56 1.33c2.69,-1.14 8.92,0 10.51,1.3A0.69,0.69 0,0 0,168.86 79.51Z"
+      android:pathData="M123.68,77.39a0.72,0.72 0,0 0,0.45 -1.28c-2.11,-1.7 -8.9,-2.81 -12,-1.51a0.71,0.71 0,0 0,-0.38 0.94,0.7 0.7,0 0,0 0.94,0.38c2.69,-1.13 8.92,0 10.5,1.31A0.74,0.74 0,0 0,123.68 77.39Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M123.45,90.42c-0.57,4.35 -4.79,9.87 -9.14,9.29s-7.18,-7 -6.61,-11.36a7.94,7.94 0,1 1,15.75 2.07Z"
+      android:pathData="M78.27,88.3c-0.57,4.35 -4.79,9.86 -9.14,9.29s-7.18,-7 -6.61,-11.37A7.94,7.94 0,0 1,78.27 88.3Z"
       android:fillColor="#ffd18f"/>
   <path
-      android:pathData="M110.64,89.42a0.81,0.81 0,0 0,0.79 -0.61c0,-0.07 1.17,-4.29 3.7,-3.87a0.82,0.82 0,1 0,0.28 -1.61c-1.2,-0.2 -2.92,0 -4.39,2.39a11.13,11.13 0,0 0,-1.17 2.67,0.82 0.82,0 0,0 0.59,1Z"
+      android:pathData="M65.46,87.29a0.8,0.8 0,0 0,0.79 -0.61c0,-0.06 1.17,-4.29 3.7,-3.86a0.82,0.82 0,1 0,0.27 -1.62c-1.19,-0.2 -2.92,0.06 -4.38,2.4a10.52,10.52 0,0 0,-1.17 2.67,0.83 0.83,0 0,0 0.59,1Z"
       android:fillColor="#d69265"/>
   <path
-      android:pathData="M120.83,114s10.18,7.35 11.2,7.9 0.54,2.82 0.54,2.82l0,6.86 -19.15,-0.77 0.93,-33.58"
+      android:pathData="M75.65,111.83s10.18,7.35 11.2,7.9 0.53,2.82 0.53,2.82l0,6.85 -19.14,-0.76 0.93,-33.58"
       android:fillColor="#ffd18f"/>
   <path
-      android:pathData="M67.87,225.66H68a0.82,0.82 0,0 0,0.69 -0.93L64.41,197a0.81,0.81 0,0 0,-0.93 -0.68,0.82 0.82,0 0,0 -0.69,0.93L67.06,225A0.82,0.82 0,0 0,67.87 225.66Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M211.31,270.37h0.11a0.82,0.82 0,0 0,0.71 -0.92l-10.59,-80.76a0.82,0.82 0,0 0,-1.62 0.22l10.58,80.75A0.83,0.83 0,0 0,211.31 270.37Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M205.67,225.66a0.81,0.81 0,0 0,0.8 -0.69l4.27,-27.71a0.82,0.82 0,0 0,-1.62 -0.25l-4.26,27.71a0.81,0.81 0,0 0,0.68 0.93Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M139.43,86.38a2.19,2.19 0,0 1,-1.71 -1.31,5 5,0 0,1 -0.49,-2.78h0a5.05,5.05 0,0 1,1 -2.66,2.24 2.24,0 0,1 1.92,-1c1.41,0.13 2.39,2 2.2,4.1a5,5 0,0 1,-1 2.65,2.31 2.31,0 0,1 -1.76,1Z"
+      android:pathData="M94.25,84.26A2.24,2.24 0,0 1,92.53 83a5.07,5.07 0,0 1,-0.48 -2.79h0a5,5 0,0 1,1 -2.65,2.22 2.22,0 0,1 1.92,-1c1.41,0.13 2.39,2 2.2,4.1a5.05,5.05 0,0 1,-1 2.65,2.31 2.31,0 0,1 -1.77,1Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M163.91,88.61c-1.41,-0.12 -2.39,-2 -2.2,-4.09a5.05,5.05 0,0 1,1 -2.66,2 2,0 0,1 3.63,0.34 5,5 0,0 1,0.49 2.78h0a5,5 0,0 1,-1 2.65,2.28 2.28,0 0,1 -1.76,1Z"
+      android:pathData="M118.73,86.49c-1.41,-0.13 -2.4,-2 -2.2,-4.1a5,5 0,0 1,1 -2.65,2 2,0 0,1 3.63,0.33 5.07,5.07 0,0 1,0.49 2.79h0a5.05,5.05 0,0 1,-1 2.65,2.31 2.31,0 0,1 -1.76,1Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M103.69,23.55m-16.99,0a16.99,16.99 0,1 1,33.98 0a16.99,16.99 0,1 1,-33.98 0"
+      android:pathData="M58.51,21.42m-16.99,0a16.99,16.99 0,1 1,33.98 0a16.99,16.99 0,1 1,-33.98 0"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M180.82,74.71c1.2,-20.53 -14.9,-38.18 -36,-39.4s-39.09,14.42 -40.29,35l76.29,4.33"
+      android:pathData="M135.64,72.59c1.2,-20.54 -14.9,-38.18 -36,-39.41s-39.1,14.43 -40.29,35l76.29,4.33"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M186,74.79c1.19,-20.52 -11.2,-37.93 -27.69,-38.89s-30.81,14.89 -32,35.41L186,74.68"
+      android:pathData="M140.78,72.67c1.19,-20.52 -11.2,-37.93 -27.69,-38.89s-30.81,14.89 -32,35.41l59.73,3.36"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M159.29,73.74c0.13,-5.38 -1.53,-11.14 -5.79,-14.43a27.48,27.48 0,0 1,1.68 14.18Z"
+      android:pathData="M114.11,71.61c0.13,-5.37 -1.53,-11.13 -5.79,-14.42A27.57,27.57 0,0 1,110 71.37Z"
       android:fillColor="#ffd18f"/>
   <path
-      android:pathData="M124.65,68.34A158.22,158.22 0,0 0,116.72 114"
+      android:pathData="M79.47,66.22a158.16,158.16 0,0 0,-7.94 45.64"
       android:strokeWidth="2.74"
       android:fillColor="#00000000"
       android:strokeColor="#003144"
       android:strokeLineCap="square"/>
   <path
-      android:pathData="M137.81,106.49a12.61,12.61 0,0 0,2.78 -0.78,3.7 3.7,0 0,1 2.87,0.1 17.82,17.82 0,0 0,2.13 1.3,18.17 18.17,0 0,0 2.42,-0.59 3.7,3.7 0,0 1,2.77 0.77,12.57 12.57,0 0,0 2.41,1.59 30.89,30.89 0,0 1,-15.38 -2.39Z"
+      android:pathData="M92.63,104.37a13.18,13.18 0,0 0,2.78 -0.78,3.66 3.66,0 0,1 2.87,0.1 17.75,17.75 0,0 0,2.13 1.29,18.13 18.13,0 0,0 2.42,-0.58 3.66,3.66 0,0 1,2.77 0.77,12.57 12.57,0 0,0 2.41,1.59 30.89,30.89 0,0 1,-15.38 -2.39Z"
       android:fillColor="#bf4036"/>
   <path
-      android:pathData="M152.46,108.79c-0.15,1 -3.55,2.27 -7.39,1.67s-6.68,-2.87 -6.53,-3.83Z"
+      android:pathData="M107.27,106.67c-0.14,1 -3.54,2.26 -7.38,1.67s-6.68,-2.88 -6.53,-3.83Z"
       android:fillColor="#bf4036"/>
   <path
-      android:pathData="M136.24,105.71c2.46,2.32 6.07,2.94 9.29,3.43a39.65,39.65 0,0 0,6 0.44,19.32 19.32,0 0,0 4.36,-0.37 0.5,0.5 0,0 0,-0.26 -1,17.66 17.66,0 0,1 -4.1,0.34 37.49,37.49 0,0 1,-5.7 -0.4c-3,-0.47 -6.52,-1 -8.84,-3.18 -0.47,-0.44 -1.18,0.27 -0.71,0.71Z"
+      android:pathData="M91.06,103.58c2.46,2.33 6.07,2.94 9.29,3.44a38.29,38.29 0,0 0,6 0.43,18.23 18.23,0 0,0 4.36,-0.37c0.63,-0.15 0.36,-1.12 -0.26,-1a17.65,17.65 0,0 1,-4.1 0.33,36.25 36.25,0 0,1 -5.7,-0.4c-3,-0.46 -6.52,-1 -8.84,-3.17 -0.47,-0.44 -1.18,0.26 -0.71,0.7Z"
       android:fillColor="#a53835"/>
 </vector>
