--- a/app/src/main/res/drawable/avatar_1.xml
+++ b/app/src/main/res/drawable/avatar_1.xml
@@ -9,113 +9,92 @@
   the License.
   -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="272.48dp"
-    android:height="271.49dp"
-    android:viewportWidth="272.48"
-    android:viewportHeight="271.49">
+    android:width="175dp"
+    android:height="175dp"
+    android:viewportWidth="175"
+    android:viewportHeight="175">
   <path
-      android:pathData="M0,0h271.49v271.49h-271.49z"
+      android:pathData="M0,0h175v175h-175z"
       android:fillColor="#f0f7d2"/>
   <path
-      android:pathData="M166.92,53.24C168.57,64 168,86.43 169.66,97.17s11.33,9 13,19.78 -8.51,11.93 -6.86,22.68 8.37,10 10,20.7l-32.94,-6.86 -23,-63.17Z"
+      android:pathData="M123.3,39.66C125,50.4 124.39,72.85 126,83.59s11.33,9 13,19.77 -8.51,11.94 -6.86,22.69 8.37,10 10,20.7l-32.94,-6.86 -23,-63.17Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M59.22,271.53l-47.81,0l11.88,-36.22l35.93,0l0,36.22z"
+      android:pathData="M183.76,182.93A47.78,47.78 0,0 1,136 230.72c-26.39,0 -61.47,-34.89 -61.47,-61.28S119,134.87 136,134.87A48,48 0,0 1,183.76 182.93Z"
+      android:fillColor="#2c80f9"/>
+  <path
+      android:pathData="M178.56,161l34.89,71.36a2.13,2.13 0,0 1,0 2c-1.71,3.14 -8,12.5 -22.56,16.67 -14.19,4.06 -26.53,7.81 -26.53,7.81L127.9,216.55Z"
+      android:fillColor="#2c80f9"/>
+  <path
+      android:pathData="M42.09,54.62h36.22v96.08h-36.22z"
+      android:fillColor="#003144"/>
+  <path
+      android:pathData="M38,55.42c-2.86,10.49 -8.8,9.54 -11.66,20s6.8,12.82 3.94,23.31S18,106.44 15.15,116.93s7.2,12.86 4.24,23.32c-1.47,5.19 -3.12,7.76 -4.77,9.47 -2.76,2.89 26,6.88 26,6.88L52.7,86Z"
+      android:fillColor="#003144"/>
+  <path
+      android:pathData="M1.08,182.93a47.78,47.78 0,0 0,47.79 47.79c26.39,0 61.47,-34.89 61.47,-61.28s-44.48,-34.57 -61.47,-34.57A48,48 0,0 0,1.08 182.93Z"
+      android:fillColor="#2c80f9"/>
+  <path
+      android:pathData="M6.28,161l-34.89,71.36a2.13,2.13 0,0 0,0 2c1.71,3.14 8,12.5 22.56,16.67C8.18,255 15.6,257.09 15.6,257.09l41.34,-40.54Z"
+      android:fillColor="#2c80f9"/>
+  <path
+      android:pathData="M70.94,113.08c0,-0.06 0,-0.12 0,-0.18 -1,-3.8 -4.28,-10.22 -14.54,-18.19l13.57,1.12 1,16.73S71.09,113.67 70.94,113.08Z"
+      android:fillColor="#003144"/>
+  <path
+      android:pathData="M119.93,50.16c2.67,27.09 -0.65,52.6 -27.74,55.27A49.29,49.29 0,1 1,82.52 7.32c19.56,-1.93 40.28,7.6 49.79,23.38C136,36.78 119.18,42.63 119.93,50.16Z"
+      android:fillColor="#003144"/>
+  <path
+      android:pathData="M118.62,131c-7,-1.78 -6.27,-16.44 -6.27,-16.44l-40.77,0.08s0.71,14.59 -6.33,16.36c-4.62,1.15 -18.62,3.82 -18.62,4 0,19.22 46,46.76 46,46.76s45.9,-27.54 45.9,-46.31C138.51,135.16 123.56,132.23 118.62,131Z"
       android:fillColor="#db8f52"/>
   <path
-      android:pathData="M209.43,271.53l47.82,0l-11.89,-36.22l-35.93,0l0,36.22z"
-      android:fillColor="#db8f52"/>
-  <path
-      android:pathData="M227.39,196.52a47.79,47.79 0,0 1,-47.79 47.79c-26.4,0 -61.47,-34.89 -61.47,-61.29s44.48,-34.57 61.47,-34.57A48,48 0,0 1,227.39 196.52Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M222.18,174.53l34.9,71.36a2.18,2.18 0,0 1,0 2c-1.71,3.13 -8,12.5 -22.57,16.66 -14.19,4.06 -26.52,7.82 -26.52,7.82l-36.42,-42.23Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M85.71,68.2h36.22v96.08h-36.22z"
-      android:fillColor="#003144"/>
-  <path
-      android:pathData="M81.63,69C78.77,79.5 72.84,78.54 70,89s6.8,12.83 3.94,23.32S61.64,120 58.78,130.52 66,143.37 63,153.83c-1.47,5.2 -3.13,7.76 -4.77,9.48 -2.76,2.88 26,6.88 26,6.88L96.33,99.63Z"
-      android:fillColor="#003144"/>
-  <path
-      android:pathData="M207.81,271.53l1.62,-15.89l-10.9,-58.6l-144.1,-0.36l4.79,74.84l148.59,0.01z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M44.7,196.52a47.8,47.8 0,0 0,47.8 47.79c26.39,0 61.46,-34.89 61.46,-61.29s-44.47,-34.57 -61.46,-34.57A48,48 0,0 0,44.7 196.52Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M49.91,174.53 L15,245.89a2.21,2.21 0,0 0,0 2c1.71,3.13 8,12.5 22.57,16.66 14.19,4.06 21.6,6.13 21.6,6.13l41.35,-40.54Z"
-      android:fillColor="#2c80f9"/>
-  <path
-      android:pathData="M60,272h-0.11a0.82,0.82 0,0 1,-0.7 -0.91l11.18,-76.51a0.81,0.81 0,1 1,1.61 0.21L60.85,271.28A0.83,0.83 0,0 1,60 272Z"
-      android:fillColor="#2669ca"/>
-  <path
-      android:pathData="M114.57,126.66c0,-0.06 0,-0.12 0,-0.18 -1,-3.79 -4.28,-10.22 -14.55,-18.19l13.58,1.12 1,16.74S114.72,127.25 114.57,126.66Z"
-      android:fillColor="#003144"/>
-  <path
-      android:pathData="M163.55,63.74c2.67,27.1 -0.64,52.6 -27.73,55.27a49.29,49.29 0,1 1,-9.67 -98.11c19.55,-1.92 40.28,7.6 49.79,23.38C179.6,50.36 162.81,56.21 163.55,63.74Z"
-      android:fillColor="#003144"/>
-  <path
-      android:pathData="M162.24,144.57c-7,-1.78 -6.26,-16.44 -6.26,-16.44l-40.78,0.08s0.72,14.59 -6.32,16.36c-4.62,1.16 -18.62,3.83 -18.62,4 0,19.21 46,46.76 46,46.76s45.9,-27.55 45.9,-46.32C182.14,148.74 167.18,145.82 162.24,144.57Z"
-      android:fillColor="#db8f52"/>
-  <path
-      android:pathData="M125.28,128.43s24.94,-6.66 30.8,-1.65c-0.65,8 1.25,12 1.25,12Z"
+      android:pathData="M81.65,114.84s24.94,-6.65 30.81,-1.64c-0.66,8 1.24,12 1.24,12Z"
       android:fillColor="#bc7646"/>
   <path
-      android:pathData="M133.12,161.78a0.81,0.81 0,0 1,-0.05 -1.62l9.08,-0.55a0.82,0.82 0,1 1,0.1 1.63l-9.08,0.54Z"
+      android:pathData="M89.49,148.2a0.82,0.82 0,0 1,0 -1.63l9.09,-0.54a0.81,0.81 0,1 1,0.09 1.62l-9.08,0.55Z"
       android:fillColor="#9e6452"/>
   <path
-      android:pathData="M138.86,129.33a44,44 0,0 0,26.89 -5.14c13.72,-7.58 13.74,-15 12.2,-30.68s-4.08,-41.81 -4.08,-41.81l-19,-9.53 -47.17,16 7.41,70.23Z"
+      android:pathData="M95.23,115.75a44.06,44.06 0,0 0,26.9 -5.14c13.71,-7.58 13.74,-15.06 12.2,-30.68s-4.09,-41.81 -4.09,-41.81l-19,-9.54L64.12,44.63l7.41,70.24Z"
       android:fillColor="#db8f52"/>
   <path
-      android:pathData="M108.07,79.2s13.78,-4.32 11.08,-31.7l-20.68,2Z"
+      android:pathData="M64.44,65.62s13.78,-4.32 11.08,-31.7L54.84,36Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M151.84,107.42a0.73,0.73 0,0 1,-0.25 0,46.35 46.35,0 0,1 -9,-4.17 0.81,0.81 0,0 1,-0.29 -1.11,0.82 0.82,0 0,1 1.12,-0.29 44.23,44.23 0,0 0,8.64 4,0.82 0.82,0 0,1 -0.26,1.59Z"
+      android:pathData="M108.21,93.84a1.09,1.09 0,0 1,-0.25 0,46.35 46.35,0 0,1 -9,-4.17 0.83,0.83 0,0 1,-0.29 -1.12,0.82 0.82,0 0,1 1.12,-0.28 45.1,45.1 0,0 0,8.64 4,0.81 0.81,0 0,1 0.52,1A0.83,0.83 0,0 1,108.21 93.84Z"
       android:fillColor="#bf4036"/>
   <path
-      android:pathData="M134,73.47a0.81,0.81 0,0 1,-0.45 -1.49,9.16 9.16,0 0,1 10,-0.57 0.81,0.81 0,1 1,-0.76 1.44,7.47 7.47,0 0,0 -8.35,0.48A0.8,0.8 0,0 1,134 73.47Z"
+      android:pathData="M90.4,59.88a0.79,0.79 0,0 1,-0.67 -0.36A0.82,0.82 0,0 1,90 58.39a9.18,9.18 0,0 1,10 -0.56,0.81 0.81,0 1,1 -0.76,1.43 7.46,7.46 0,0 0,-8.34 0.49A0.84,0.84 0,0 1,90.4 59.88Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M156.35,93.57a0.82,0.82 0,0 1,-0.8 -0.69,0.81 0.81,0 0,1 0.68,-0.93c1.34,-0.21 4.72,-1.37 4.32,-4.13A6.07,6.07 0,0 0,157.7 84a3.23,3.23 0,0 1,-1.35 -2l-1.08,-5.55a0.81,0.81 0,1 1,1.6 -0.31L158,81.66a1.57,1.57 0,0 0,0.65 1,7.67 7.67,0 0,1 3.56,4.92c0.53,3.64 -3.1,5.57 -5.68,6Z"
+      android:pathData="M112.73,80a0.81,0.81 0,0 1,-0.8 -0.69,0.81 0.81,0 0,1 0.67,-0.93c1.34,-0.22 4.73,-1.38 4.32,-4.13a6.08,6.08 0,0 0,-2.84 -3.81,3.2 3.2,0 0,1 -1.36,-2l-1.08,-5.56a0.82,0.82 0,0 1,0.65 -0.95,0.8 0.8,0 0,1 0.95,0.64l1.08,5.56a1.55,1.55 0,0 0,0.65 1c1.17,0.78 3.2,2.44 3.56,4.93 0.54,3.63 -3.1,5.56 -5.67,6Z"
       android:fillColor="#9e6452"/>
   <path
-      android:pathData="M166.69,76.61a4.36,2.54 86.57,1 0,5.08 -0.3a4.36,2.54 86.57,1 0,-5.08 0.3z"
+      android:pathData="M122.47,63.64a4.35,2.54 86.81,1 0,5.07 -0.28a4.35,2.54 86.81,1 0,-5.07 0.28z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M136.93,79.8a4.35,2.54 86.81,1 0,5.07 -0.28a4.35,2.54 86.81,1 0,-5.07 0.28z"
+      android:pathData="M93.3,66.22a4.35,2.54 86.81,1 0,5.07 -0.28a4.35,2.54 86.81,1 0,-5.07 0.28z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M109.46,85.8m-9.3,0a9.3,9.3 0,1 1,18.6 0a9.3,9.3 0,1 1,-18.6 0"
+      android:pathData="M65.84,72.21m-9.3,0a9.3,9.3 0,1 1,18.6 0a9.3,9.3 0,1 1,-18.6 0"
       android:fillColor="#db8f52"/>
   <path
-      android:pathData="M171.72,31.31c-9.8,-13.7 -58,-20.64 -77.52,6.65l76.92,0Z"
+      android:pathData="M128.09,17.73c-9.8,-13.7 -58,-20.64 -77.52,6.65l76.92,0Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M160.41,61.14l10.21,-0.68 6.46,-8.88 -5,-13.15 -58.54,3.68L114.89,64l34,-2.14a2.16,2.16 0,0 0,2 -1.73l2.49,-12.19a0.27,0.27 0,0 1,0.52 0l4.39,11.83A2.18,2.18 0,0 0,160.41 61.14Z"
+      android:pathData="M116.79,47.56l10.2,-0.68L133.45,38l-5,-13.15L69.89,28.52l1.37,21.89 34,-2.13a2.17,2.17 0,0 0,2 -1.73l2.48,-12.2a0.27,0.27 0,0 1,0.52 0l4.4,11.83A2.17,2.17 0,0 0,116.79 47.56Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M166.49,60.75l11,-0.69a2.16,2.16 0,0 0,2 -1.86c0.77,-5.41 1.92,-21.87 -11,-29.16 -5.23,-2.95 -21,-2.69 -21,-2.69Z"
+      android:pathData="M122.86,47.16l11,-0.68a2.19,2.19 0,0 0,2 -1.87c0.76,-5.4 1.91,-21.86 -11,-29.15 -5.22,-3 -21,-2.69 -21,-2.69Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M103.63,87h0a0.81,0.81 0,0 1,-0.79 -0.83,12.41 12.41,0 0,1 0.61,-3.31c0.81,-2.36 2.27,-3.68 4.24,-3.8a0.81,0.81 0,0 1,0.86 0.76,0.82 0.82,0 0,1 -0.76,0.87c-3.14,0.19 -3.32,5.47 -3.32,5.52A0.83,0.83 0,0 1,103.63 87Z"
+      android:pathData="M60,73.44h0a0.81,0.81 0,0 1,-0.79 -0.83,12.41 12.41,0 0,1 0.61,-3.31c0.81,-2.37 2.28,-3.68 4.24,-3.8a0.81,0.81 0,1 1,0.1 1.62c-3.14,0.2 -3.32,5.48 -3.32,5.53A0.82,0.82 0,0 1,60 73.44Z"
       android:fillColor="#9e6452"/>
   <path
-      android:pathData="M63.89,249.13c-0.41,0 -1.35,-0.93 -1.4,-1.35l-4.22,-41.57a0.81,0.81 0,1 1,1.62 -0.18l4.22,41.57a0.82,0.82 0,0 1,-0.72 0.9S63.92,249.13 63.89,249.13Z"
-      android:fillColor="#2669ca"/>
-  <path
-      android:pathData="M110.18,98.15m-6.06,0a6.06,6.06 0,1 1,12.12 0a6.06,6.06 0,1 1,-12.12 0"
+      android:pathData="M66.55,84.56m-6.06,0a6.06,6.06 0,1 1,12.12 0a6.06,6.06 0,1 1,-12.12 0"
       android:fillColor="#2c80f9"/>
   <path
-      android:pathData="M182.23,59.59h-0.08a0.83,0.83 0,0 1,-0.73 -0.9C182.8,45.43 178,38.25 175,35.15c-5.12,-5.32 -13,-7.68 -23.42,-7a0.81,0.81 0,0 1,-0.86 -0.76,0.82 0.82,0 0,1 0.76,-0.87c10.92,-0.7 19.23,1.82 24.7,7.51 3.17,3.3 8.28,10.91 6.83,24.83A0.81,0.81 0,0 1,182.23 59.59Z"
+      android:pathData="M138.61,46h-0.09a0.8,0.8 0,0 1,-0.72 -0.89c1.38,-13.26 -3.41,-20.44 -6.39,-23.54 -5.12,-5.32 -13,-7.68 -23.42,-7a0.81,0.81 0,1 1,-0.11 -1.62c10.92,-0.71 19.23,1.82 24.7,7.5 3.18,3.3 8.28,10.92 6.83,24.84A0.8,0.8 0,0 1,138.61 46Z"
       android:fillColor="#003144"/>
   <path
-      android:pathData="M163.51,71a0.81,0.81 0,0 1,-0.46 -1.49,9.16 9.16,0 0,1 10,-0.57 0.81,0.81 0,1 1,-0.76 1.44,7.46 7.46,0 0,0 -8.34,0.48A0.77,0.77 0,0 1,163.51 71Z"
+      android:pathData="M119.88,57.41a0.84,0.84 0,0 1,-0.68 -0.36,0.82 0.82,0 0,1 0.22,-1.13 9.18,9.18 0,0 1,10 -0.57,0.81 0.81,0 0,1 0.34,1.1 0.82,0.82 0,0 1,-1.1 0.34,7.47 7.47,0 0,0 -8.35,0.48A0.85,0.85 0,0 1,119.88 57.41Z"
       android:fillColor="#003144"/>
-  <path
-      android:pathData="M207.26,271.73l2.17,-21.91 -3.14,-31.21s-32.81,-8.1 -54.51,21c-12.46,16.72 -36.47,26.61 -53.49,31.82Z"
-      android:fillColor="#287be3"/>
-  <path
-      android:pathData="M208,272.36h0a0.82,0.82 0,0 1,-0.78 -0.85c0.65,-15.74 1.11,-54.74 -8.85,-76.78a0.82,0.82 0,0 1,0.41 -1.08,0.8 0.8,0 0,1 1.07,0.41c10.11,22.36 9.66,61.66 9,77.52A0.81,0.81 0,0 1,208 272.36Z"
-      android:fillColor="#2669ca"/>
 </vector>
